[gd_scene load_steps=17 format=3 uid="uid://c4b6khd33tysp"]

[ext_resource type="Script" uid="uid://bymgxy1psd45h" path="res://character/character.gd" id="1_phdif"]
[ext_resource type="Texture2D" uid="uid://cehyy72i5ulc4" path="res://tiles/lights/simple_light.png" id="2_kipoy"]
[ext_resource type="PackedScene" uid="uid://r85gefbjuj1w" path="res://character/character_hitbox.tscn" id="2_qkr1y"]
[ext_resource type="Texture2D" uid="uid://df4gd67ml4g6u" path="res://character/fire_01.png" id="3_14ic5"]
[ext_resource type="Texture2D" uid="uid://bs0lhbp2sf24" path="res://character/star_08.png" id="4_q6p6r"]
[ext_resource type="Material" uid="uid://tw7ur6taxj3p" path="res://particles/SunParticles.tres" id="5_hd715"]
[ext_resource type="Texture2D" uid="uid://bi8oq3hpy1y68" path="res://item_effects/speed_particle.png" id="6_2qvqd"]
[ext_resource type="PackedScene" uid="uid://bxox6butkxpwh" path="res://character/invincibility.tscn" id="6_rt6gv"]
[ext_resource type="Material" uid="uid://hhkc16w38nf1" path="res://particles/MoonParticles.tres" id="7_hq3og"]
[ext_resource type="Texture2D" uid="uid://cwwkryv7oh4jm" path="res://character/ice.svg" id="7_l8eep"]
[ext_resource type="PackedScene" uid="uid://d3ul8rfnnwv3p" path="res://character_display/character_display.tscn" id="9_ydu4f"]
[ext_resource type="Material" uid="uid://b0kud4406o47w" path="res://particles/SpeedParticles.tres" id="10_orckd"]
[ext_resource type="Texture2D" uid="uid://b1pcm6l0nv5w6" path="res://character/super_jump_aura.svg" id="11_r00fj"]
[ext_resource type="Script" uid="uid://cho1gwvbolta2" path="res://items/item.gd" id="14_rudt7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdlk0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ju3rb"]

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_phdif")

[node name="CharacterHitbox" parent="." instance=ExtResource("2_qkr1y")]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -100)
ignore_rotation = false
zoom = Vector2(0.1, 0.1)

[node name="Light" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -66)
enabled = false
energy = 0.5
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("2_kipoy")

[node name="SunParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -106)
emitting = false
amount = 30
texture = ExtResource("3_14ic5")
lifetime = 0.5
fixed_fps = 60
process_material = ExtResource("5_hd715")

[node name="MoonParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -106)
emitting = false
amount = 30
texture = ExtResource("4_q6p6r")
lifetime = 0.5
fixed_fps = 60
process_material = ExtResource("7_hq3og")

[node name="Display" parent="." instance=ExtResource("9_ydu4f")]

[node name="SpeedParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -106)
emitting = false
amount = 15
texture = ExtResource("6_2qvqd")
lifetime = 0.57
fixed_fps = 60
process_material = ExtResource("10_orckd")

[node name="LowArea" type="Area2D" parent="."]
position = Vector2(0, -32)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowArea"]
shape = SubResource("RectangleShape2D_hdlk0")

[node name="HighArea" type="Area2D" parent="."]
position = Vector2(0, -180)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighArea"]
shape = SubResource("RectangleShape2D_ju3rb")

[node name="ItemManager" type="Node2D" parent="."]
position = Vector2(-6, -128)
script = ExtResource("14_rudt7")

[node name="Invincibility" parent="." instance=ExtResource("6_rt6gv")]
visible = false
modulate = Color(1, 1, 1, 0.247059)
z_index = 1
position = Vector2(10, -10)
scale = Vector2(0.3, 0.3)

[node name="SuperJumpAura" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.25, 0.5)
texture = ExtResource("11_r00fj")
offset = Vector2(0, -74)

[node name="Ice" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4, 0)
scale = Vector2(0.65, 0.65)
texture = ExtResource("7_l8eep")
offset = Vector2(0, -180)

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
